--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
             }
         </script>
         <script type='text/javascript' src='https://cn.bing.com/api/maps/mapcontrol?branch=experimental&setmkt=zh-cn&key=AvlT7qpfjE4a13M-bHvVFdjbZ3nucErlEsdfqp3oFqL5OAHX0sHFlxR74gWBWa1c&callback=loadMapScenario' async defer></script>
-
+    	<style type="text/css">
+    		
+    		.postcard__img {
+    			min-height: 200px
+    		}
+    	</style>
 	</head>
 	<body style="font-family:'Noto Sans SC', sans-serif; cursive;">
 		<nav class="navbar sticky-top navbar-expand-lg navbar-light"  style="background-color: #EDFFEC;">
@@ -299,7 +304,6 @@
 			</div> 
 		</section>
 		
-
 		<section id="tutors" class="light" style="background-color:#FFEE93;">
 			<div class="container py-2">
 				<div class="h1 text-center text-dark" id="pageHeaderTitle"> Tutors </div>
@@ -307,7 +311,7 @@
 
 				<article class="postcard light blue">
 					<a class="postcard__img_link" href="#">
-						<img class="postcard__img" src="images/cube.png" alt="Cube" />
+						<img class="postcard__img" src="images/cube.png" alt="Cube"/>
 					</a>
 					<div class="postcard__text t-dark">
 						<h1 class="postcard__title blue"><a href="#">Cube</a></h1>
