--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href='css/homepage.css'/>
 		<link rel="stylesheet" type="text/css" href="css/timeline.css">
 
+
 		<!-- Bootstrap CSS -->
 		<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
 
@@ -38,6 +39,7 @@
 
 		<!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
 		<script type="text/javascript" src="js/jquery-3.2.1.slim.min.js"></script>
+		<script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
 		<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
 		<script type="text/javascript" src="js/popper.min.js"></script>
 		<!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
@@ -133,14 +135,19 @@
     	</style>
 	</head>
 	<body style="font-family:'Noto Sans SC', sans-serif; cursive;">
-		<nav class="navbar sticky-top navbar-expand-lg navbar-light"  style="background-color: #EDFFEC;">
+
+
+		<nav class="navbar navbar-expand-lg  navbar-light"  style="background-color: #EDFFEC;">
+			<div class="container-fluid">
 			<a class="navbar-brand" href="#">
 				<img src="images/logo.png" height="28" class="d-inline-block align-top">
 			</a>
-
-			<div class="collapse navbar-collapse" id="navbarNav">
-				<ul class="navbar-nav">
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      			<span class="navbar-toggler-icon"></span>
+    		</button>
 					
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
 						<a class="nav-link" href="#">Hackathon 夏令营</a>
 					</li>
@@ -166,6 +173,7 @@
 					</li>
 
 				</ul>
+			</div>
 			</div>
 		</nav>
 
@@ -728,11 +736,11 @@
 							  	<div class="mt-3">
 									<div class="row">
 									  	<div class="col-lg-12">
-											<p style="color:white">Dr. Next 来思博士 / 索尼国际教育 KOOV 赋能教室</p>
+											<p style="color:white; font-size: 12px;">Dr. Next 来思博士 / 索尼国际教育 KOOV 赋能教室</p>
 									  	</div>
 									  	
 									  	<div class="col-lg-12">
-										  	<p style="color:white">深圳市南山区侨北一街富田创意文化园 304</p>
+										  	<p style="color:white;font-size: 12px;">深圳市南山区侨北一街富田创意文化园 304</p>
 									  	</div>
 									  	<div class="col-lg-12">
 											<p style="color:white;">Phone: 15O 4495 5693</p>
@@ -742,7 +750,7 @@
 							</div>
 					  	</div>
 					</div>
-					<div class="col-lg-6 right-image p-r-0">
+					<div class="col-lg-6 right-image p-r-0" style="max-width: 50%;">
 						<div id="myMap"></div>
 					</div>
 				</div>
