--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
                     maxWidth: 420,
                     title: 'Dr. Next 来思博士',
                     description: '索尼国际教育 KOOV 赋能教室'
-                    // description: '<iframe src="images/https://channel9.msdn.com/Events/Build/2016/B867/player#time=0h15m26s:paused" width="400" height="225" allowFullScreen frameBorder="0"></iframe>'
                 });
                 infobox.setMap(map);
                 
@@ -128,9 +127,11 @@
         </script>
         <script type='text/javascript' src='https://cn.bing.com/api/maps/mapcontrol?branch=experimental&setmkt=zh-cn&key=AvlT7qpfjE4a13M-bHvVFdjbZ3nucErlEsdfqp3oFqL5OAHX0sHFlxR74gWBWa1c&callback=loadMapScenario' async defer></script>
     	<style type="text/css">
-    		
     		.postcard__img {
     			min-height: 300px
+    		}
+    		.badge {
+    			color: black;
     		}
     	</style>
 	</head>
