--- a/students_wall.html
+++ b/students_wall.html
@@ -108,12 +108,12 @@
 	<body style="font-family:'Noto Sans SC', sans-serif; cursive;">
 		<nav class="navbar navbar-expand-lg  navbar-light"  style="background-color: #EDFFEC;">
 			<div class="container-fluid">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="index.html">
 				<img src="images/logo.png" height="28" class="d-inline-block align-top">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      			<span class="navbar-toggler-icon"></span>
-    		</button>
+      	<span class="navbar-toggler-icon"></span>
+    	</button>
 					
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -124,7 +124,7 @@
 						<a class="nav-link" href="students_wall.html">小小工程师</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="students_project_exibition.html">学员作品展</a>
+						<a class="nav-link" href="students_project_exhibition.html">学员作品展</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="honor_wall.html">赛事成绩和荣誉</a>
