--- a/honor_wall.html
+++ b/honor_wall.html
@@ -109,7 +109,7 @@
 	<body style="font-family:'Noto Sans SC', sans-serif; cursive;">
 		<nav class="navbar navbar-expand-lg  navbar-light"  style="background-color: #EDFFEC;">
 			<div class="container-fluid">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="index.html">
 				<img src="images/logo.png" height="28" class="d-inline-block align-top">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -125,7 +125,7 @@
 						<a class="nav-link" href="students_wall.html">小小工程师</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="students_project_exibition.html">学员作品展</a>
+						<a class="nav-link" href="students_project_exhibition.html">学员作品展</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="honor_wall.html">赛事成绩和荣誉</a>
