--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 		<nav class="navbar navbar-expand-lg  navbar-light"  style="background-color: #EDFFEC;">
 			<div class="container-fluid">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="index.html">
 				<img src="images/logo.png" height="28" class="d-inline-block align-top">
 			</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
