--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 				<div style="padding-top: 20%">
 					<h1 style="font-size: 45px">Dr. Next 来思博士</h1>
 
-					<h4 style="color: darkgray;">编程，让孩子对话未来!</h4>
+					<h4 style="color: darkgray;">孩子的知识乐园!</h4>
 					<br>
 					<br>
 					<br>
