--- a/honor_wall.html
+++ b/honor_wall.html
@@ -175,7 +175,7 @@
 			    	深圳首家索尼（索尼国际教育）KOOV 赋能教室
 			    	<footer class="blockquote-footer"><cite title="Source Title">2021.06.01.</cite></footer>
 			    </li>
-			    <li class="list-group-item">2021 RoboRave Asia 世界机器人大赛亚洲区金奖
+			    <li class="list-group-item"><a href="https://www.sony.com.cn/content/sonyportal/zh-cn/cms/newscenter/corporate/2021/2021-04-26.html">2021 RoboRave Asia 世界机器人大赛亚洲区金奖</a>
 			    	<footer class="blockquote-footer"><cite title="Source Title">2021.03.24.</cite></footer>
 			    </li>
 			    <li class="list-group-item">深圳市南山区香山里小学校本课Microbit编程课特聘服务机构
