--- a/doudou/index.html
+++ b/doudou/index.html
@@ -68,9 +68,9 @@
 
                    <iframe style="width:800px;height:600px" frameborder="0" src="https://v.qq.com/txp/iframe/player.html?vid=y33264m7wgl" allowFullScreen="true"></iframe>
 
-                   <video width="640" height="480" controls autoplay>  
+                    <video width="640" height="480" controls>  
                          <source src="assets/goldsnake.mp4" type="video/mp4">  
-</video>   
+                    </video>   
 
                     <div>
                             <img src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fimg.puchedu.cn%2Fuploads%2F1%2F26%2F541200586%2F466059177.jpg&refer=http%3A%2F%2Fimg.puchedu.cn&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1650877699&t=fa7b50a35e6032c93919292fc49bd504">
