--- a/dyz/index.html
+++ b/dyz/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         帅气十足风流倜傥的李东鸿的好兄弟
-                        <a href="www.douyin.com">name@email.com</a>
+                        <a href="https://www.douyin.com"><抖音，你懂的></a>
                     </div>
                     <p class="lead mb-5">我是一个帅气逼人，气质不凡的一个帅气小伙儿，我擅长装13，打游戏等等，你见到我后一定会被我的帅气迷倒</p>
                     <div class="social-icons">
