--- a/dongdong/index.html
+++ b/dongdong/index.html
@@ -47,7 +47,7 @@
                         Dr. Next 来思博士
                         <a href="mailto:name@email.com">OCAHS middle school</a>
                     </div>
-                    <p class="lead mb-5">My name is Tony. I study at OCAHS middle school. I am outgoing and kind-hearted. I prefer in sports.</p>
+                    <p class="lead mb-5">My name is Tony. I used to study in Hong Kong about four years. Then I moved to Shenzhen because of covid-19. Now I take my classes at OCAHS middle school. I am an outgoing and kind-hearted person. I prefer playing sports rather than staying at home.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
@@ -144,21 +144,18 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Hip Hop dance
                         </li>
+                        
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            facial recognition - OpenCV 
+                             Basketball
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                             basketball
+                             Table tennis
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                             table tennis
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                             badminton
+                             Badminton
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -166,7 +163,7 @@
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                             ukulele
+                             Ukulele
                         </li>
                     </ul>
                 </div>
@@ -176,7 +173,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>I have many hobbies. I have studied dancing for five years, basketball for four years, robot for three years and ukulele for four years ago.</p>
+                    <p style="font-size: 25px;">I have many hobbies. I have studied dancing for five years, basketball for four years, robot programming for three years and ukulele for four years ago. I like playing video games such as PUBG and apex.</p>
                     <p class="mb-0"></p>
                 </div>
             </section>
