--- a/students_wall.html
+++ b/students_wall.html
@@ -194,7 +194,7 @@
 					    </div>
 					  </div>
 					</div>
-					<div class="card mb-3">
+					<!-- <div class="card mb-3">
 					  <div class="row no-gutters">
 					    <div class="col-md-4">
 					      <img src="" class="card-img" alt="">
@@ -207,8 +207,8 @@
 					      </div>
 					    </div>
 					  </div>
-					</div>
-					<div class="card mb-3">
+					</div> -->
+					<!-- <div class="card mb-3">
 					  <div class="row no-gutters">
 					    <div class="col-md-4">
 					      <img src="" class="card-img" alt="">
@@ -221,7 +221,7 @@
 					      </div>
 					    </div>
 					  </div>
-					</div>
+					</div> -->
 					<div class="card mb-3">
 					  <div class="row no-gutters">
 					    <div class="col-md-4">
@@ -230,13 +230,13 @@
 					    <div class="col-md-8">
 					      <div class="card-body">
 					        <h5 class="card-title">夏涌恬</h5>
-					        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+					        <p class="card-text">一个爱跳舞、爱画画，同时也爱用编程进行创作的可爱小朋友。获得腾讯NOC编程大赛全国冠军！</p>
 					        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
 					      </div>
 					    </div>
 					  </div>
 					</div>
-					<div class="card mb-3">
+					<!-- <div class="card mb-3">
 					  <div class="row no-gutters">
 					    <div class="col-md-4">
 					      <img src="" class="card-img" alt="">
@@ -249,7 +249,7 @@
 					      </div>
 					    </div>
 					  </div>
-					</div>
+					</div> -->
 				</div>
 			</div> 
 		</section>
