--- a/orientation.html
+++ b/orientation.html
@@ -71,19 +71,22 @@
 					
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link" href="#">Hackathon 夏令营</a>
-					</li>
+					</li> -->
 					<li class="nav-item">
 						<a class="nav-link" href="students_wall.html">小小工程师</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="students_project_exhibition.html">学员作品展</a>
+						<a class="nav-link" href="orientation.html">培养方案</a>
 					</li>
+					<!-- <li class="nav-item">
+						<a class="nav-link" href="students_project_exhibition.html">学员作品展</a>
+					</li> -->
 					<li class="nav-item">
 						<a class="nav-link" href="honor_wall.html">赛事成绩和荣誉</a>
 					</li>
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link" href="#">创业实战孵化案例</a>
 					</li>
 					<li class="nav-item">
@@ -91,7 +94,7 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">问答 Q&A</a>
-					</li>
+					</li> -->
 
 				</ul>
 			</div>
@@ -121,7 +124,7 @@
 					</div>
 
 					<div class="card" style="width: 50%;">
-					  <img class="card-img-top" src="images/pythongame.jpg" style="height: 250px">
+					  <img class="card-img-top" src="images/python2-header.png" style="height: 250px">
 					  <div class="card-body">
 						<h5 class="card-title">Python 桌面游戏</h5>
 						<p class="card-text">使用Python开发电脑端的游戏，包括设计、开发、流行游戏引擎学习、游戏逻辑运用、社区分享等。</p>
@@ -137,18 +140,18 @@
 				<div class="card-deck">
 
 					<div class="card" style="min-width: 20rem; margin-bottom: 20px;">
-						<img class="card-img-top" src="images/python2.png" alt="Python">
+						<img class="card-img-top" src="images/Swift-for-iOS-Apps.jpg" alt="Python">
 						<div class="card-body">
-							<h5 class="card-title">Python 编程基础</h5>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<h5 class="card-title">iOS App 应用开发</h5>
+							<p class="card-text">学习使用Swift语言，与学生一起设计、研发产品。解决生活中用户的实际需求，完成App产品的从零到一实现。</p>
 						</div>
 					</div>
 
 					<div class="card" style="min-width: 20rem; margin-bottom: 20px;">
-						<img class="card-img-top" src="images/pythongame.jpg" alt="Python">
+						<img class="card-img-top" src="images/python2-header.png" alt="Python Game">
 						<div class="card-body">
-							<h5 class="card-title">Python 游戏开发</h5>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<h5 class="card-title">HTML Web 应用开发</h5>
+							<p class="card-text">通过学习HTML语言、Bootstrap框架、JavaScript语言、CSS语言，实现网页前端的设计。结合Nodejs框架，完成服务器搭建，开发网页App和HTML网页游戏。</p>
 						</div>
 					</div>
 				</div>
@@ -160,18 +163,18 @@
 				<div class="card-deck">
 
 					<div class="card" style="min-width: 20rem; margin-bottom: 20px;">
-						<img class="card-img-top" src="images/python2.png" alt="Python">
+						<img class="card-img-top" src="images/facialrecognition.png" alt="Python">
 						<div class="card-body">
-							<h5 class="card-title">Python 编程基础</h5>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<h5 class="card-title">人脸识别</h5>
+							<p class="card-text">通过使用Python语言，结合OpenCV框架，实现基础的人脸识别技术，实现常用的人脸识别软件功能，结合硬件实现智能硬件的研发。</p>
 						</div>
 					</div>
 
 					<div class="card" style="min-width: 20rem; margin-bottom: 20px;">
-						<img class="card-img-top" src="images/pythongame.jpg" alt="Python">
+						<img class="card-img-top" src="images/imageprocess.png" alt="Python">
 						<div class="card-body">
-							<h5 class="card-title">Python 游戏开发</h5>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<h5 class="card-title">图像识别</h5>
+							<p class="card-text">使用Python语言和OpenCV，结合图像基础理论，实现常用的图像处理任务，理解Photoshopt和美颜软件的底层原理。</p>
 						</div>
 					</div>
 				</div>
@@ -183,18 +186,18 @@
 				<div class="card-deck">
 
 					<div class="card" style="min-width: 20rem; margin-bottom: 20px;">
-						<img class="card-img-top" src="images/python2.png" alt="Python">
+						<img class="card-img-top" src="images/autodrive.png" alt="Python">
 						<div class="card-body">
-							<h5 class="card-title">Python 编程基础</h5>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<h5 class="card-title">自动驾驶</h5>
+							<p class="card-text">使用树莓派硬件，结合Arduino设备，制作可以自动驾驶的智能小车。结合软硬件相关知识，实现人工智能机器人的研发。</p>
 						</div>
 					</div>
 
 					<div class="card" style="min-width: 20rem; margin-bottom: 20px;">
-						<img class="card-img-top" src="images/pythongame.jpg" alt="Python">
+						<img class="card-img-top" src="images/interactivegame.jpeg" alt="Python">
 						<div class="card-body">
-							<h5 class="card-title">Python 游戏开发</h5>
-							<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+							<h5 class="card-title">智能交互项目</h5>
+							<p class="card-text">基于Python和图像处理技术，实现智能交互项目。完成基于摄像头的智能操控开发，通过手势控制窗帘，通过手势控制游戏角色。</p>
 						</div>
 					</div>
 				</div>
