--- a/students_wall.html
+++ b/students_wall.html
@@ -116,19 +116,25 @@
 					
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link" href="#">Hackathon 夏令营</a>
-					</li>
+					</li> -->
 					<li class="nav-item">
 						<a class="nav-link" href="students_wall.html">小小工程师</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="students_project_exhibition.html">学员作品展</a>
+						<a class="nav-link" href="orientation.html">培养方案</a>
 					</li>
+					<!-- <li class="nav-item">
+						<a class="nav-link" href="oreintation.html">培养方案</a>
+					</li> -->
+					<!-- <li class="nav-item">
+						<a class="nav-link" href="students_project_exhibition.html">学员作品展</a>
+					</li> -->
 					<li class="nav-item">
 						<a class="nav-link" href="honor_wall.html">赛事成绩和荣誉</a>
 					</li>
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link" href="#">创业实战孵化案例</a>
 					</li>
 					<li class="nav-item">
@@ -136,7 +142,7 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">问答 Q&A</a>
-					</li>
+					</li> -->
 
 				</ul>
 			</div>
@@ -151,10 +157,10 @@
 					</p>
 
 				<div class="card-deck">
-					<div class="card mb-3">
-					  <div class="row no-gutters">
+					<div class="card" style="width:50%">
+					  <div class="row no-gutters" >
 					    <div class="col-md-4">
-					      <img src="" class="card-img" alt="">
+					      <img src="images/xiayongan.jpg" class="card-img" alt="">
 					    </div>
 					    <div class="col-md-8">
 					      <div class="card-body">
@@ -166,10 +172,10 @@
 					  </div>
 					</div>
 
-					<div class="card mb-3">
+					<div class="card" style="width:50%;">
 					  <div class="row no-gutters">
 					    <div class="col-md-4">
-					      <img src="" class="card-img" alt="">
+					      <img src="images/liyiting.jpg" class="card-img" alt="">
 					    </div>
 					    <div class="col-md-8">
 					      <div class="card-body">
@@ -180,10 +186,12 @@
 					    </div>
 					  </div>
 					</div>
-					<div class="card mb-3">
+				</div>
+				<div class="card-deck" style="margin-top: 20px;">
+					<div class="card" style="width:50%">
 					  <div class="row no-gutters">
 					    <div class="col-md-4">
-					      <img src="" class="card-img" alt="">
+					      <img src="images/haohaoran.jpg" class="card-img" alt="">
 					    </div>
 					    <div class="col-md-8">
 					      <div class="card-body">
@@ -222,10 +230,10 @@
 					    </div>
 					  </div>
 					</div> -->
-					<div class="card mb-3">
+					<div class="card" style="width:50%">
 					  <div class="row no-gutters">
 					    <div class="col-md-4">
-					      <img src="" class="card-img" alt="">
+					      <img src="images/xiayongtian.jpg" class="card-img" alt="">
 					    </div>
 					    <div class="col-md-8">
 					      <div class="card-body">
@@ -236,6 +244,7 @@
 					    </div>
 					  </div>
 					</div>
+				</div>
 					<!-- <div class="card mb-3">
 					  <div class="row no-gutters">
 					    <div class="col-md-4">
@@ -250,7 +259,7 @@
 					    </div>
 					  </div>
 					</div> -->
-				</div>
+
 			</div> 
 		</section>
 
