--- a/honor_wall.html
+++ b/honor_wall.html
@@ -118,20 +118,23 @@
 					
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link" href="#">Hackathon 夏令营</a>
-					</li>
+					</li> -->
 					<li class="nav-item">
 						<a class="nav-link" href="students_wall.html">小小工程师</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="students_project_exhibition.html">学员作品展</a>
+						<a class="nav-link" href="orientation.html">培养方案</a>
 					</li>
+					<!-- <li class="nav-item">
+						<a class="nav-link" href="students_project_exhibition.html">学员作品展</a>
+					</li> -->
 					<li class="nav-item">
 						<a class="nav-link" href="honor_wall.html">赛事成绩和荣誉</a>
 					</li>
 
-					<li class="nav-item">
+					<!-- <li class="nav-item">
 						<a class="nav-link" href="#">创业实战孵化案例</a>
 					</li>
 					<li class="nav-item">
@@ -139,7 +142,7 @@
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">问答 Q&A</a>
-					</li>
+					</li> -->
 
 				</ul>
 			</div>
