--- a/orientation.html
+++ b/orientation.html
@@ -186,7 +186,7 @@
 				<div class="card-deck">
 
 					<div class="card" style="min-width: 20rem; margin-bottom: 20px;">
-						<img class="card-img-top" src="images/autodrive.png" alt="Python">
+						<img class="card-img-top" src="images/autodrive.jpg" alt="Python">
 						<div class="card-body">
 							<h5 class="card-title">自动驾驶</h5>
 							<p class="card-text">使用树莓派硬件，结合Arduino设备，制作可以自动驾驶的智能小车。结合软硬件相关知识，实现人工智能机器人的研发。</p>
