--- a/orientation.html
+++ b/orientation.html
@@ -148,7 +148,7 @@
 					</div>
 
 					<div class="card" style="min-width: 20rem; margin-bottom: 20px;">
-						<img class="card-img-top" src="images/python2-header.png" alt="Python Game">
+						<img class="card-img-top" src="images/mario.png" alt="Python Game">
 						<div class="card-body">
 							<h5 class="card-title">HTML Web 应用开发</h5>
 							<p class="card-text">通过学习HTML语言、Bootstrap框架、JavaScript语言、CSS语言，实现网页前端的设计。结合Nodejs框架，完成服务器搭建，开发网页App和HTML网页游戏。</p>
@@ -163,7 +163,7 @@
 				<div class="card-deck">
 
 					<div class="card" style="min-width: 20rem; margin-bottom: 20px;">
-						<img class="card-img-top" src="images/facialrecognition.png" alt="Python">
+						<img class="card-img-top" src="images/facialrecognition.jpg" alt="Python">
 						<div class="card-body">
 							<h5 class="card-title">人脸识别</h5>
 							<p class="card-text">通过使用Python语言，结合OpenCV框架，实现基础的人脸识别技术，实现常用的人脸识别软件功能，结合硬件实现智能硬件的研发。</p>
